5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1582_1559.log
== SUBMITION (2019-03-14 15:04:48) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.???)
-- EXECUTION TIME:
0.154661
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:05:35) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase.???)
-- EXECUTION TIME:
0.19725
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:06:21) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.185707
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:06:23) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.201098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:06:23) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.168484
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:06:23) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.0955629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 15:06:23) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.112961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:35:22) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
-- EXECUTION TIME:
0.204552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1559/main.py", line 2, in <module>
    print(frase ("Ada Lovelace foi a primeira programadora da historia.")) 
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:35:48) 
-- CODE:
frase = ("Ada Lovelace foi a primeira programadora da historia.")
print(frase.upper()) 
-- EXECUTION TIME:
0.120667
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
